force-app/main/default/objects/Zuora_Customer_HPM_Quote_Field__c/Zuora_Customer_HPM_Quote_Field__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains information on which Quote fields to display on the Zuora Customer HPM Payment Method Capture Page</description>
    <label>Zuora Customer HPM Quote Field</label>
</CustomObject>