force-app/main/default/objects/Zuora_Customer_HPM_Quote_Field__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Order in which to display the field</description>
    <inlineHelpText>Order in which to display the field</inlineHelpText>
    <label>Display Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>