force-app/main/default/objects/Zuora_Customer_HPM_Quote_Field__c/fields/Enable_For_New_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Enable_For_New_Subscriptions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to display this field for New Subscription Quotes</description>
    <inlineHelpText>Whether or not to display this field for New Subscription Quotes</inlineHelpText>
    <label>Enable For New Subscriptions</label>
    <type>Checkbox</type>
</CustomField>