force-app/main/default/objects/Zuora_Customer_HPM_Quote_Field__c/fields/Enable_for_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Renewals__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to display this field for Renewal Quotes</description>
    <inlineHelpText>Whether or not to display this field for Renewal Quotes</inlineHelpText>
    <label>Enable for Renewals</label>
    <type>Checkbox</type>
</CustomField>