force-app/main/default/objects/Zuora_Customer_HPM_Quote_Field__c/fields/Quote_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Field_API_Name__c</fullName>
    <description>API Name of Quote Field to display</description>
    <inlineHelpText>API Name of Quote Field to display</inlineHelpText>
    <label>Quote Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>