force-app/main/default/objects/Zuora_Customer_HPM_Quote_Field__c/fields/Quote_Field_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Quote_Field_Display_Label__c</fullName>
    <description>Label to display in the Quote field table</description>
    <inlineHelpText>Label to display in the Quote field table</inlineHelpText>
    <label>Quote Field Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>